# ScreenTranslator

./: .gitattributes  LICENSE  README.md
doc/: 01base.md  02tauri最新语法.md
script/: 00base.md  01.md  02create.py
src/: image_viewer.html  index.html  results.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs  settings.rs  translator.rs
src/css/: style.css
src/js/: image_viewer.js  main.js  results.js  screenshot.js
