[package]
name = "src-tauri"
version = "0.1.0"
description = "A Tauri-based screenshot translator"
authors = ["cc"]
license = "MIT"
repository = "https://github.com/git-hub-cc/ScreenTranslator"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
# Tauri 核心库
tauri = { version = "1.6", features = [
    "clipboard-write-text",
    "window-all",
    "shell-sidecar",
    "global-shortcut-all",
    "fs-all",
    "path-all",
    "http-request",
    "notification-all"
] }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

# 单实例插件 (用于防止重复运行并唤醒窗口)
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 异步运行时
tokio = { version = "1", features = ["full"] }

# 截图与图像处理
xcap = "0.8.1"
image = "0.25"
png = "0.17"

# 剪贴板
arboard = "3"

# 全局变量与工具
once_cell = "1.19"
async-trait = "0.1.89"
base64 = "0.22"
encoding_rs = "0.8"

# 用于下载引擎和解压
reqwest = { version = "0.11", features = ["stream", "json"] }
futures-util = "0.3"
# 移除 zip 依赖，仅使用 sevenz-rust 处理 7z 格式
sevenz-rust = "0.1"

[features]
custom-protocol = ["tauri/custom-protocol"]
